ch9/ch9-start-alternative/iac-macro-usage/tests/fails/bucket_typo.stderr
error: only 'bucket' and 'lambda' resources are supported
 --> tests/fails/bucket_typo.rs:5:9
  |
5 |         bucke uniquename
  |         ^^^^^
